Webclient - Fix album header alignment issue in Firefox

--- a/opal/styles/scss/album.scss
+++ b/opal/styles/scss/album.scss
@@ -8,7 +8,6 @@
   {
     position: relative;
     display: flex;
-    justify-content: right;
     align-items: flex-start;
     width: 100%;
 
